[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/BaseCharacter/BaseCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/BaseEnemy/BaseEnemy.gd" type="Script" id=2]
[ext_resource path="res://modulate_white.gdshader" type="Shader" id=3]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Characters/BaseEnemy/Chase.gd" type="Script" id=5]
[ext_resource path="res://Characters/BaseEnemy/Wander.gd" type="Script" id=6]
[ext_resource path="res://Characters/BaseEnemy/Asleep.gd" type="Script" id=7]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=1]
radius = 438.138

[node name="BaseEnemy" groups=["Enemy"] instance=ExtResource( 1 )]
script = ExtResource( 2 )
health = 30

[node name="Skin" parent="." index="0"]
material = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="." index="3"]
show_behind_parent = true
input_pickable = false
monitorable = false

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea" index="0"]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="." index="4"]

[node name="StateMachine" type="Node" parent="." index="5"]
script = ExtResource( 4 )
initial_state = NodePath("Wander")

[node name="Wander" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 6 )

[node name="Chase" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 5 )

[node name="Asleep" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 7 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
